# saaz

./: .env.example  .gitignore  .replit  Makefile  README.md  SCHEDULER.md  artists.json  pyproject.toml  refresh.py  replit.md
attached_assets/: Pasted--The-saaz-MCP-server-is-now-consumed-by-two-surfaces-di_1779415539677.txt  Pasted-You-are-making-a-small-change-to-scripts-mcp-server-py-_1779477098157.txt
docs/: CLAUDE_CODE_PROMPT.md
migrations/: 0001_init.sql
scripts/: check_mneme.py  embed.py  enrich.py  mcp_server.py  seed.py  verify.py
