[project]
name = "saaz"
version = "0.0.1"
description = "A small, curated demo dataset of Persian songwriters and artists for testing the mneme middleware."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "pydantic>=2.8,<3",
    "mcp>=1.2",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
